fixed class call issue

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           class="header__image"
         />
       </header>
-      <main class="page_content">
+      <main class="page__content">
         <section class="profile page__section">
           <img
             src="./images/jacques-cousteau.png"
