made corrections from first submit review

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
           alt="Around the US logo"
           class="header__image"
         />
+        <div class="header__divider"></div>
       </header>
-      <main class="page__content">
-        <section class="profile page__section">
+      <main class="page__section">
+        <section class="profile">
           <img
             src="./images/jacques-cousteau.png"
             alt="Avatar"
@@ -30,7 +31,7 @@
           </div>
           <button class="profile__add-button"></button>
         </section>
-        <section class="cards page__section">
+        <section class="cards">
           <ul class="cards__list">
             <li class="card">
               <img
@@ -100,7 +101,7 @@
             </li>
           </ul>
         </section>
-        <footer class="footer page__section">
+        <footer class="footer">
           <p class="footer__copyright">&copy; 2023 Around the U.S.</p>
         </footer>
       </main>
