--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </main>
     </div>
 
-    <div class="modal modal__opened">
+    <div class="modal__opened modal">
       <div class="modal__container">
         <button class="modal__close"></button>
         <p class="modal__heading">Edit Profile</p>
