--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <button
           class="modal__close"
           id="profile-edit-modal-close-button"
+          type="button"
         ></button>
-        <p class="modal__heading">Edit Profile</p>
+        <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form" id="edit-profile-modal-form">
           <input
             type="text"
@@ -56,6 +57,7 @@
             id="edit-profile-title"
             placeholder="Name"
             class="modal__input"
+            required
           />
           <input
             type="text"
@@ -79,6 +81,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
