--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button" id="add-card-button"></button>
         </section>
         <section class="cards">
           <ul class="cards__list" id="cards-list"></ul>
@@ -67,6 +67,36 @@
             class="modal__input"
           />
           <button class="modal__button" type="submit">Save</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          id="add-card-modal-close-button"
+          type="button"
+        ></button>
+        <h3 class="modal__heading">New Place</h3>
+        <form class="modal__form" id="add-card-modal-form">
+          <input
+            type="text"
+            name="title"
+            id="add-card-title"
+            placeholder="Name"
+            class="modal__input"
+            required
+          />
+          <input
+            type="text"
+            name="image"
+            id="add-card-image"
+            placeholder="Image Link"
+            class="modal__input"
+            required
+          />
+          <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
     </div>
