--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <input
             type="text"
             name="image"
-            id="add-card-image"
+            id="add-card-link"
             placeholder="Image Link"
             class="modal__input"
             required
@@ -101,9 +101,22 @@
       </div>
     </div>
 
+    <div class="modal" id="preview-image-modal">
+      <div class="modal__container-image">
+        <button
+          class="modal__close"
+          id="preview-image-modal-close-button"
+          type="button"
+        ></button>
+        <img src="#" alt="#" class="modal__image" />
+        <h3 class="modal__image-caption"></h3>
+      </div>
+    </div>
+
     <template id="card-template">
       <li class="card">
-        <img class="card__image" id="card-image" src="" alt="" />
+        <button class="card__delete-button"></button>
+        <img class="card__image" id="card-image" src="#" alt="#" />
         <div class="card__description">
           <h2 class="card__title" id="card-title"></h2>
           <button class="card__like-button"></button>
