fix: refactored form selectors from suggestion in review

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
           type="button"
         ></button>
         <h3 class="modal__heading">Edit Profile</h3>
-        <form class="modal__form" id="edit-profile-modal-form">
+        <form
+          class="modal__form"
+          name="edit-profile-form"
+          id="edit-profile-modal-form"
+        >
           <input
             type="text"
             name="title"
@@ -79,7 +83,7 @@
           type="button"
         ></button>
         <h3 class="modal__heading">New Place</h3>
-        <form class="modal__form" id="add-card-modal-form">
+        <form class="modal__form" name="add-card-form" id="add-card-modal-form">
           <input
             type="text"
             name="title"
