--- a/index.html
+++ b/index.html
@@ -61,15 +61,22 @@
             id="edit-profile-title"
             placeholder="Name"
             class="modal__input"
+            minlength="2"
+            maxlength="40"
             required
           />
+          <span class="modal__error id="edit-profile-title-error""></span>
           <input
             type="text"
             name="description"
             id="edit-profile-description"
             placeholder="Description"
             class="modal__input"
+            minlength="2"
+            maxlength="200"
+            required
           />
+          <span class="modal__error" id="edit-profile-description-error"></span>
           <button class="modal__button" type="submit">Save</button>
         </form>
       </div>
@@ -90,16 +97,20 @@
             id="add-card-title"
             placeholder="Name"
             class="modal__input"
+            minlength="1"
+            maxlength="30"
             required
           />
+          <span class="modal__error" id="add-card-title"></span>
           <input
-            type="text"
+            type="url"
             name="image"
             id="add-card-link"
             placeholder="Image Link"
             class="modal__input"
             required
           />
+          <span class="modal__error" id="add-card-link-error"></span>
           <button class="modal__button" type="submit">Create</button>
         </form>
       </div>
@@ -115,7 +126,7 @@
         <img src="#" alt="#" class="modal__image" />
         <h3 class="modal__image-caption"></h3>
       </div>
-    </div>
+    </form>
 
     <template id="card-template">
       <li class="card">
@@ -129,5 +140,6 @@
     </template>
 
     <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/validation.js" defer></script>
   </body>
 </html>
