feat/ added working validation for each input in forms, added click overlay to close modal, added pressing escape to close modal, added formReset so errors don't show up when you reopen modal after closing

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             maxlength="40"
             required
           />
-          <span class="modal__error id="edit-profile-title-error""></span>
+          <span class="modal__error" id="edit-profile-title-error"></span>
           <input
             type="text"
             name="description"
@@ -101,7 +101,7 @@
             maxlength="30"
             required
           />
-          <span class="modal__error" id="add-card-title"></span>
+          <span class="modal__error" id="add-card-title-error"></span>
           <input
             type="url"
             name="image"
@@ -111,7 +111,7 @@
             required
           />
           <span class="modal__error" id="add-card-link-error"></span>
-          <button class="modal__button" type="submit">Create</button>
+          <button class="modal__button" id="add-card-submit-button" type="submit">Create</button>
         </form>
       </div>
     </div>
