fix/ fixed validation errors for preview image modal

--- a/index.html
+++ b/index.html
@@ -111,7 +111,13 @@
             required
           />
           <span class="modal__error" id="add-card-link-error"></span>
-          <button class="modal__button" id="add-card-submit-button" type="submit">Create</button>
+          <button
+            class="modal__button"
+            id="add-card-submit-button"
+            type="submit"
+          >
+            Create
+          </button>
         </form>
       </div>
     </div>
@@ -126,7 +132,7 @@
         <img src="#" alt="#" class="modal__image" />
         <h3 class="modal__image-caption"></h3>
       </div>
-    </form>
+    </div>
 
     <template id="card-template">
       <li class="card">
