--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
       </li>
     </template>
 
-    <script src="./scripts/index.js" defer></script>
-    <script src="./scripts/validation.js" defer></script>
+    <script type="module" src="./pages/index.js" defer></script>
   </body>
 </html>
