--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the U.S</title>
-    <link href="./pages/index.css" rel="stylesheet" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
         <img
-          src="./images/logo.svg"
+          src="<%=require('./images/logo.svg')%>"
           alt="Around the US logo"
           class="header__image"
         />
@@ -19,7 +18,7 @@
       <main class="page__section">
         <section class="profile">
           <img
-            src="./images/jacques-cousteau.png"
+            src="<%=require('./images/jacques-cousteau.png')%>"
             alt="Avatar"
             class="profile__image"
           />
@@ -144,7 +143,5 @@
         </div>
       </li>
     </template>
-
-    <script type="module" src="./pages/index.js" defer></script>
   </body>
 </html>
