--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
               class="profile__edit-button"
               id="profile-edit-button"
             ></button>
-            <p class="profile__description">Explorer</p>
+            <p class="profile__description" id="prof-description">Explorer</p>
           </div>
           <button class="profile__add-button" id="add-card-button"></button>
         </section>
@@ -56,7 +56,7 @@
         >
           <input
             type="text"
-            name="title"
+            name="name"
             id="edit-profile-title"
             placeholder="Name"
             class="modal__input"
@@ -92,7 +92,7 @@
         <form class="modal__form" name="add-card-form" id="add-card-modal-form">
           <input
             type="text"
-            name="title"
+            name="name"
             id="add-card-title"
             placeholder="Name"
             class="modal__input"
@@ -103,7 +103,7 @@
           <span class="modal__error" id="add-card-title-error"></span>
           <input
             type="url"
-            name="image"
+            name="link"
             id="add-card-link"
             placeholder="Image Link"
             class="modal__input"
