Fixed: got initial cards to load to webpage, got editing profile name and about partially working

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,10 @@
         <img class="card__image" id="card-image" src="#" alt="#" />
         <div class="card__description">
           <h2 class="card__title" id="card-title"></h2>
-          <button class="card__like-button"></button>
+          <div class="card__like-container">
+            <button class="card__like-button"></button>
+            <span class="card__likes-count">0</span>
+          </div>
         </div>
       </li>
     </template>
