fixed: got add card working and edit profile working

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
             id="delete-modal-close-button"
             type="button"
           ></button>
-          <h3 class="modal__heading">"Are you sure?"</h3>
+          <h3 class="modal__heading">Are you sure?</h3>
           <button class="modal__button" id="confirm-button" type="button">
             Yes
           </button>
