--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
             type="button"
           ></button>
           <h3 class="modal__heading">Are you sure?</h3>
-          <button class="modal__button" id="confirm-button" type="button">
+          <button class="modal__button" id="confirm-button" type="submit">
             Yes
           </button>
         </form>
